perkins lib ported to models

--- a/app/views/profile/show.erb
+++ b/app/views/profile/show.erb
@@ -1,36 +1,1 @@
-<ul class="demo-list-three mdl-list">
-
-  <% @github_repos.each do |repo| %>
-    
-    <li class="mdl-list__item mdl-list__item--three-line">
-      
-      <span class="mdl-list__item-primary-content">
-        <i class="material-icons mdl-list__item-avatar">person</i>
-        <span><%= repo["name"] %></span>
-        <span class="mdl-list__item-text-body">
-          <a href="<%= repo["html_url"] %>">
-            <%= repo["full_name"]%>
-          </a>
-          <br/>
-          <%= repo["description"] %>
-        </span>
-      </span>
-
-      <span class="mdl-list__item-secondary-content">
-
-        <a href="/repos/add/<%=repo["id"]%>" class="mdl-button mdl-js-button mdl-button--fab">
-          <i class="material-icons">add</i>
-        </a>
-
-        <!--
-          <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="switch-1">
-            <input type="checkbox" id="switch-1" class="mdl-switch__input" checked>
-            <span class="mdl-switch__label"></span>
-          </label>
-        -->
-
-      </span>
-    </li>
-  <% end %>
-
-</ul>
+<%= render "repos" %>
