--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,8 @@
       <span class="mdl-layout-title">PerkinsCI</span>
       <nav class="mdl-navigation">
         <a class="mdl-navigation__link" href="">example</a>
-        
+        <h4>My Repos</h4>
+        <a href="/profile">+</a>
         <ul class="demo-list-icon mdl-list">
           <% Repo.all.each do |repo| %>
             <li class="mdl-list__item">
@@ -44,7 +45,7 @@
           <% if user_signed_in? %>
             <%= link_to "Logout", destroy_user_session_path , class:"mdl-navigation__link", method: :delete %>
            
-            <%= link_to "settings", "#", class:"mdl-navigation__link" %>
+            <%= link_to "settings", "/profile", class:"mdl-navigation__link" %>
           <% else %> 
             <%= link_to "login", new_user_session_path , class:"mdl-navigation__link" %>
           <% end %> 
