--- a/app/views/repos/show.erb
+++ b/app/views/repos/show.erb
@@ -1,29 +1,4 @@
-<div class="demo-card-wide mdl-card--dis mdl-shadow--2dp">
-  
-  <div class="mdl-card__title">
-    <h2 class="mdl-card__title-text">
-      <%= @repo.name %>
-    </h2>
-  </div>
-
-  <div class="mdl-card__supporting-text">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-    Mauris sagittis pellentesque lacus eleifend lacinia...
-  </div>
-
-  <div class="mdl-card__actions mdl-card--border">
-    <a href="/repos/<%= @repo.name %>/run_commit"class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-      Run last commit
-    </a>
-  </div>
-
-  <div class="mdl-card__menu">
-    <button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
-      <i class="material-icons">share</i>
-    </button>
-  </div>
-
-</div>
+<%= render "card" %>
 
 <h3> Builds </h3>
 
