--- a/app/views/repos/show.erb
+++ b/app/views/repos/show.erb
@@ -1,6 +1,6 @@
 <%= render "card" %>
 
-<h3> Builds </h3>
+<h3>Builds jobs</h3>
 
 <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp" style="width:100%">
   
@@ -27,9 +27,7 @@
         </td>
 
         <td class="mdl-data-table__cell--non-numeric">
-          <a href="/repos/<%=@repo.name%>/builds/<%=build.id%>">
-            <%= build.status %>
-          </a>
+          <%= @build.commit[:commit][:message].split("\n")[0] %>
         </td>
 
         <td>
@@ -45,13 +43,15 @@
           <% if build.build_status == "stopped" %>
             <%= "(#{build.duration}) secs" %>
           <% else %>
-            - running
+            <%= build.build_status %>
           <% end %>
         </td>
 
         <td>
           <% if build.build_status == "stopped" %>
             <abbr class="timeago" title= <%= build.build_time %> >
+              <%= build.build_time %>
+            </abbr>
           <% end %>
         </td>
         
