--- a/app/views/repos/show.erb
+++ b/app/views/repos/show.erb
@@ -1,6 +1,10 @@
 <%= render "card" %>
 
-<h3>Builds jobs</h3>
+<div class="mdl-card__title">
+  <h3 class="mdl-card__title-text">
+    Builds jobs
+  </h3>
+</div>
 
 <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp" style="width:100%">
   
