partials and views

--- a/app/views/profile/index.erb
+++ b/app/views/profile/index.erb
@@ -4,7 +4,7 @@
   <div class="mdl-tabs mdl-js-tabs mdl-js-ripple-effect">
     <div class="mdl-tabs__tab-bar">
         <a href="#orgs-panel" class="mdl-tabs__tab is-active">  
-          Organizaciones
+          Orgs
         </a>
         <a href="#repos-panel" class="mdl-tabs__tab">Repos</a>
     </div>
@@ -13,7 +13,7 @@
 
       <div class="mdl-card__title">
         <h3 class="mdl-card__title-text">
-          Selecciona una organización
+          Select organization
         </h3>
       </div>
 
