--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2,6 +2,9 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.mdl-data-table th {
+  text-align: left !important;
+}
 
 .mdl-components__warning {
     width: 100%;
@@ -23,6 +26,55 @@
   height: 20px;
   margin-left: 10px;
   margin-top: 4px;
+}
+
+.mini-card {
+  height: 83px;
+  margin-bottom: 6px !important;
+  margin-top: 6px !important;
+  .mdl-card{
+    min-height: 83px !important;
+    height: 20px !important;
+  }
+
+  .truncate {
+    width: 179px !important;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    float: right;
+  }
+
+  .black{
+    background-color: rgb(66,66,66);
+  }
+
+  .red{
+    background-color: rgb(244, 67, 54);
+  }
+
+  .green{
+    background-color: rgb(139, 195, 74);
+  }
+
+  .mdl-card__supporting-text{
+    .material-icons{
+      font-size: 15px;
+    }
+    .title{
+      font-size: 1em;
+    }
+    padding: 4px 9px;
+    p{
+      line-height: 15px;
+    }
+    .stats{
+      p{
+        margin:2px;
+        font-size: 0.9em;
+      }
+    }
+  }
 }
 
 
