--- a/app/assets/stylesheets/log.css.scss
+++ b/app/assets/stylesheets/log.css.scss
@@ -18,9 +18,9 @@ p {
   white-space: normal;
   background-color: #333;
   border: 1px solid #ddd;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
+  //-webkit-border-radius: 4px;
+  //-moz-border-radius: 4px;
+  //border-radius: 4px;
   overflow-x: scroll;
 }
 #log {
