--- a/app/views/repos/show.erb
+++ b/app/views/repos/show.erb
@@ -13,15 +13,16 @@
       <th class="mdl-data-table__cell--non-numeric">
         Build
       </th>
+      <th>Status</th>
       <th>Message</th>
       <th>Commit</th>
       <th>Duration</th>
-      <th>Finished</th>
+      <th>Finished At</th>
     </tr>
   </thead>
 
   <tbody>
-    <%= render partial: "builds/row", collection: @repo.build_reports, as: :build, locals: { repo: @repo } %>
+    <%= render partial: "builds/row", collection: @builds, as: :build, locals: { repo: @repo } %>
   </tbody>
 
 </table>
