allowed orgs for github sign in

--- a/app/views/layouts/session.html.erb
+++ b/app/views/layouts/session.html.erb
@@ -24,6 +24,8 @@
         <h2 class="mdl-card__title-text">PerkinsCI.</h2>
       </div>
       <div class="mdl-card__supporting-text">
+        <p class="notice"><%= notice %></p>
+        <p class="alert"><%= alert %></p>
         <!--
         <form action="#">
           <div class="mdl-textfield mdl-js-textfield">
