react views implemented

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -51,6 +51,10 @@ header.green{
   background-color: rgb(139, 195, 74);
 }
 
+header.yellow{
+  background-color: rgb(255, 235, 59);
+}
+
 .mini-card {
   height: 83px;
   margin-bottom: 6px !important;
